[package]
name = "service_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = "0.3.24"
hostname = "0.3.1"
if-addrs = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
anyhow = "1.0.65"
atoi = "2.0.0"
axum = "0.5.16"
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.85"
reqwest = { version = "0.11.11", features = ["json"] }
lazy_static = "1.4.0"
libmdns = "0.7.1"
mdns-sd = "0.5.7"
phactory-api = { git = "https://github.com/Phala-Network/phala-blockchain", version = "0.1.0", features = ["pruntime-client"] }
prost = "0.11.0"
fast-socks5 = { git = "https://github.com/Phala-Network/fast-socks5" }
trust-dns-resolver = { version = "0.22.0", features = ["dns-over-https-rustls"] }
rust-fsm = "0.6.0"
urlparse = "0.7.3"
tower-http = { version = "0.3.4", features = ["cors"] }
semver = "1.0.14"

[workspace]
