[package]
name = "psn_peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = "0.3.24"
hostname = "0.3.1"
if-addrs = "0.7.0"
mdns-sd = "0.5.7"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
