[package]
name = "service_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
libmdns = "0.7.1"
log = "0.4.17"
psn_peer = { version = "0.1.0", path = "../psn_peer" }
tokio = { version = "1.21.0", features = ["full"] }
